# beaverki

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
crates/beaverki-agent/: Cargo.toml
crates/beaverki-agent/src/: default_personality.md  lib.rs
crates/beaverki-automation/: Cargo.toml
crates/beaverki-automation/src/: lib.rs
crates/beaverki-cli/: Cargo.toml
crates/beaverki-cli/src/: main.rs
crates/beaverki-config/: Cargo.toml
crates/beaverki-config/src/: lib.rs
crates/beaverki-core/: Cargo.toml
crates/beaverki-core/src/: lib.rs
crates/beaverki-db/: Cargo.toml
crates/beaverki-db/migrations/: 0001_init.sql  0002_m1_core.sql  0003_m1_5_daemon.sql  0004_m3_automation.sql  0005_m2_5_approval_safety.sql  0006_m4_semantic_memory.sql  0007_m4_memory_forget.sql  0008_m4_5_session_context.sql  0009_m4_7_lua_tools.sql  0010_m5_household_delivery.sql  0011_m5_5_household_delivery_schedule.sql  0012_m6_workflow_pipelines.sql  0013_m6_workflow_versioning.sql  0014_m6_workflow_stage_history.sql  0015_m6_5_session_transcript_summaries.sql
crates/beaverki-db/src/: lib.rs
crates/beaverki-memory/: Cargo.toml
crates/beaverki-memory/src/: lib.rs
crates/beaverki-models/: Cargo.toml
crates/beaverki-models/src/: lib.rs
crates/beaverki-policy/: Cargo.toml
crates/beaverki-policy/src/: lib.rs
crates/beaverki-runtime/: Cargo.toml
crates/beaverki-runtime/src/: connector_support.rs  daemon.rs  delivery.rs  discord.rs  history.rs  lib.rs  secrets.rs  session.rs  types.rs  workflow.rs
crates/beaverki-runtime/src/discord/: api.rs  approvals.rs  context.rs  gateway.rs  interactions.rs  mod.rs  models.rs
crates/beaverki-tools/: Cargo.toml
crates/beaverki-tools/src/: lib.rs  notion.rs
crates/beaverki-web/: Cargo.toml
crates/beaverki-web/src/: browser.rs  main.rs  setup.rs
docs/: behavior.md  cli-operations.md  delivery-plan.md  design.md  developer-workflow.md  discord-setup.md  memory_design.md  notion-setup.md  public-readiness.md  sessions.md  technical-spec.md  workflow-pipelines.md
docs/examples/: morning-news-digest-workflow.json
packaging/: README.md  build-release-archive.sh  install.sh
packaging/launchd/: dev.beaverki.daemon.plist  dev.beaverki.web.plist
packaging/systemd/: beaverki-daemon.service  beaverki-web.service
skills/household_shopping/: shopping_list_add_items.lua  shopping_list_get.lua  skill.yaml
skills/notion/: notion_append_content.lua  notion_capture_note.lua  notion_comment.lua  notion_delete_blocks.lua  notion_raw_api_request.lua  notion_read_entry.lua  notion_update_page.lua  notion_workspace_search.lua  skill.yaml
