[package]
name = "beaverki-automation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
beaverki-core = { path = "../beaverki-core" }
beaverki-db = { path = "../beaverki-db" }
beaverki-models = { path = "../beaverki-models" }
beaverki-policy = { path = "../beaverki-policy" }
beaverki-tools = { path = "../beaverki-tools" }
chrono.workspace = true
cron.workspace = true
mlua.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
