[package]
name = "beaverki-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
beaverki-config = { path = "../beaverki-config" }
beaverki-core = { path = "../beaverki-core" }
beaverki-db = { path = "../beaverki-db" }
beaverki-models = { path = "../beaverki-models" }
beaverki-policy = { path = "../beaverki-policy" }
beaverki-runtime = { path = "../beaverki-runtime" }
clap.workspace = true
dialoguer.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
