[package]
name = "beaverki-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
age.workspace = true
anyhow.workspace = true
dialoguer.workspace = true
directories.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
