[package]
name = "beaverki-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
beaverki-core = { path = "../beaverki-core" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
