[package]
name = "beaverki-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
beaverki-config = { path = "../beaverki-config" }
beaverki-tools = { path = "../beaverki-tools" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
