[package]
name = "beaverki-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
beaverki-agent = { path = "../beaverki-agent" }
beaverki-config = { path = "../beaverki-config" }
beaverki-core = { path = "../beaverki-core" }
beaverki-db = { path = "../beaverki-db" }
beaverki-memory = { path = "../beaverki-memory" }
beaverki-models = { path = "../beaverki-models" }
beaverki-tools = { path = "../beaverki-tools" }
tracing.workspace = true

[lints]
workspace = true
