[package]
name = "beaverki-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
beaverki-automation = { path = "../beaverki-automation" }
beaverki-agent = { path = "../beaverki-agent" }
beaverki-config = { path = "../beaverki-config" }
beaverki-core = { path = "../beaverki-core" }
beaverki-db = { path = "../beaverki-db" }
beaverki-memory = { path = "../beaverki-memory" }
beaverki-models = { path = "../beaverki-models" }
beaverki-policy = { path = "../beaverki-policy" }
beaverki-tools = { path = "../beaverki-tools" }
chrono.workspace = true
cron.workspace = true
futures-util.workspace = true
mlua.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
