[package]
name = "beaverki-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
beaverki-core = { path = "../beaverki-core" }
beaverki-policy = { path = "../beaverki-policy" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(unix)'.dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
